# starter-data-python

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
data/: README.md
data/raw/: population_africa_sample.csv
docs/en/: architecture.md  getting-started.md
docs/fr/: architecture.md  getting-started.md
notebooks/: 01_load_data.ipynb  02_basic_analysis.ipynb  03_duckdb_queries.ipynb  04_ml_intro.ipynb
src/: utils.py
tests/: test_utils.py
