[project]
name = "starter-data-python"
version = "0.1.0"
description = "Skilluv starter — Jupyter + pandas + DuckDB + scikit-learn."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "jupyterlab>=4.3.0",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
